--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url = jdbc:sqlserver://localhost;databaseName=demo;encrypt=true;trustServerCertificate=true
+spring.datasource.username = SA
+spring.datasource.password = 123456a@
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+server.port=8080
+
 
